traces/bug_778.txt
src/Graphics/ffglut.cpp:1625: error: DEAD_STORE
  The value written to &plot (type ThePlot&) is never used.
Showing all 1 steps of the trace


src/Graphics/ffglut.cpp:1625:3: Write of unused value
1623.   void OnePlot::GLDraw(OneWindow *win)
1624.   {
1625.     ThePlot & plot= *win->theplot; 
          ^
1626.     Draw(win);
1627.     
